makes sure the views for the pages that are not being printed are completely hidden Bug 83138 r=kmclusk sr=attinasi a=dbaron